fixed horizontal overflow and wierd vertical scrolling

--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -90,7 +90,7 @@ html {
 .s1 {
     height: 100vh;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
     position: relative;
     text-align: center;
     z-index: 101;
@@ -104,14 +104,14 @@ html {
     position: absolute;
     top: -70px;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: -1;
 }
 
 @media (min-aspect-ratio: 16/9) {
     .s1 {
-        width: 100vw;
+        width: 100%;
         height: auto;
     }
 }
